--- a/index.html
+++ b/index.html
@@ -31,30 +31,30 @@
                         </div>
                         <div class="col-12 d-flex align-items-center mb-2">
                             <a href="index.html" class="text-decoration-none text-light d-flex align-items-center">
-                            <div class="me-3">
-                                <i class="bi bi-house-fill"></i>
-                            </div>
-                            <div>
-                                <span>Home</span>
-                            </div>
-                        </a>
+                                <div class="me-3">
+                                    <i class="bi bi-house-fill"></i>
+                                </div>
+                                <div>
+                                    <span>Home</span>
+                                </div>
+                            </a>
                         </div>
                         <div class="col-12  d-flex align-items-center mb-2">
                             <a href="search.html" class="text-decoration-none text-light d-flex align-items-center">
-                            <div class="me-3">
-                                <svg data-encore-id="icon" role="img" width="19" height="19" aria-hidden="true"
-                                    fill="currentColor"
-                                    class="Svg-sc-ytk21e-0 bneLcE search-active-icon QbaKKdcHNA2x3_YJvpYu"
-                                    viewBox="0 0 24 24">
-                                    <path
-                                        d="M1.126 10.558c0-5.14 4.226-9.28 9.407-9.28 5.18 0 9.407 4.14 9.407 9.28a9.157 9.157 0 0 1-2.077 5.816l4.344 4.344a1 1 0 0 1-1.414 1.414l-4.353-4.353a9.454 9.454 0 0 1-5.907 2.058c-5.18 0-9.407-4.14-9.407-9.28zm9.407-7.28c-4.105 0-7.407 3.274-7.407 7.28s3.302 7.279 7.407 7.279 7.407-3.273 7.407-7.28c0-4.005-3.302-7.278-7.407-7.278z">
-                                    </path>
-                                </svg>
-                            </div>
-                            <div>
-                                <span>Cerca</span>
-                            </div>
-                        </a>
+                                <div class="me-3">
+                                    <svg data-encore-id="icon" role="img" width="19" height="19" aria-hidden="true"
+                                        fill="currentColor"
+                                        class="Svg-sc-ytk21e-0 bneLcE search-active-icon QbaKKdcHNA2x3_YJvpYu"
+                                        viewBox="0 0 24 24">
+                                        <path
+                                            d="M1.126 10.558c0-5.14 4.226-9.28 9.407-9.28 5.18 0 9.407 4.14 9.407 9.28a9.157 9.157 0 0 1-2.077 5.816l4.344 4.344a1 1 0 0 1-1.414 1.414l-4.353-4.353a9.454 9.454 0 0 1-5.907 2.058c-5.18 0-9.407-4.14-9.407-9.28zm9.407-7.28c-4.105 0-7.407 3.274-7.407 7.28s3.302 7.279 7.407 7.279 7.407-3.273 7.407-7.28c0-4.005-3.302-7.278-7.407-7.278z">
+                                        </path>
+                                    </svg>
+                                </div>
+                                <div>
+                                    <span>Cerca</span>
+                                </div>
+                            </a>
                         </div>
                         <div class="col-12  d-flex align-items-center">
                             <div class="me-3">
@@ -212,7 +212,7 @@
                                         <div class="imageUser me-1">
                                             <img src="assets/imgs/main/image-1.jpg" class="img-fluid rounded-pill" />
                                         </div>
-                                        <span class="userName me-1 pe-2 fw-bold">Campion Luca</span>
+                                        <span class="userName me-1 pe-2 fw-bold">User</span>
                                     </button>
                                     <ul class="dropdown-menu me-1" aria-labelledby="dropdownMenuButton1">
                                         <li><a class="dropdown-item" href="#">Profile</a></li>
