--- a/album.html
+++ b/album.html
@@ -30,100 +30,97 @@
         <!-- PRIMA COLONNA-->
         <nav class="col-3 bg-black d-flex flex-column vh-100 px-4 py-3 m-0">
           <div class="mb-4">
-              <div class="col-12 mb-2">
-                  <div>
-                      <i class="bi bi-three-dots"></i>
-                  </div>
+            <div class="col-12 mb-2">
+              <div>
+                <i class="bi bi-three-dots"></i>
               </div>
-              <div class="col-12 d-flex align-items-center mb-2">
-                  <a href="index.html" class="text-decoration-none text-light d-flex align-items-center">
-                  <div class="me-3">
-                      <i class="bi bi-house-fill"></i>
-                  </div>
-                  <div>
-                      <span>Home</span>
-                  </div>
+            </div>
+            <div class="col-12 d-flex align-items-center mb-2">
+              <a href="index.html" class="text-decoration-none text-light d-flex align-items-center">
+                <div class="me-3">
+                  <i class="bi bi-house-fill"></i>
+                </div>
+                <div>
+                  <span>Home</span>
+                </div>
               </a>
-              </div>
-              <div class="col-12  d-flex align-items-center mb-2">
-                  <a href="search.html" class="text-decoration-none text-light d-flex align-items-center">
-                  <div class="me-3">
-                      <svg data-encore-id="icon" role="img" width="19" height="19" aria-hidden="true"
-                          fill="currentColor"
-                          class="Svg-sc-ytk21e-0 bneLcE search-active-icon QbaKKdcHNA2x3_YJvpYu"
-                          viewBox="0 0 24 24">
-                          <path
-                              d="M1.126 10.558c0-5.14 4.226-9.28 9.407-9.28 5.18 0 9.407 4.14 9.407 9.28a9.157 9.157 0 0 1-2.077 5.816l4.344 4.344a1 1 0 0 1-1.414 1.414l-4.353-4.353a9.454 9.454 0 0 1-5.907 2.058c-5.18 0-9.407-4.14-9.407-9.28zm9.407-7.28c-4.105 0-7.407 3.274-7.407 7.28s3.302 7.279 7.407 7.279 7.407-3.273 7.407-7.28c0-4.005-3.302-7.278-7.407-7.278z">
-                          </path>
-                      </svg>
-                  </div>
-                  <div>
-                      <span>Cerca</span>
-                  </div>
+            </div>
+            <div class="col-12  d-flex align-items-center mb-2">
+              <a href="search.html" class="text-decoration-none text-light d-flex align-items-center">
+                <div class="me-3">
+                  <svg data-encore-id="icon" role="img" width="19" height="19" aria-hidden="true" fill="currentColor"
+                    class="Svg-sc-ytk21e-0 bneLcE search-active-icon QbaKKdcHNA2x3_YJvpYu" viewBox="0 0 24 24">
+                    <path
+                      d="M1.126 10.558c0-5.14 4.226-9.28 9.407-9.28 5.18 0 9.407 4.14 9.407 9.28a9.157 9.157 0 0 1-2.077 5.816l4.344 4.344a1 1 0 0 1-1.414 1.414l-4.353-4.353a9.454 9.454 0 0 1-5.907 2.058c-5.18 0-9.407-4.14-9.407-9.28zm9.407-7.28c-4.105 0-7.407 3.274-7.407 7.28s3.302 7.279 7.407 7.279 7.407-3.273 7.407-7.28c0-4.005-3.302-7.278-7.407-7.278z">
+                    </path>
+                  </svg>
+                </div>
+                <div>
+                  <span>Cerca</span>
+                </div>
               </a>
+            </div>
+            <div class="col-12  d-flex align-items-center">
+              <div class="me-3">
+                <svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 24 24" width="19" height="19"
+                  fill="currentColor" class="Svg-sc-ytk21e-0 bneLcE">
+                  <path
+                    d="M14.5 2.134a1 1 0 0 1 1 0l6 3.464a1 1 0 0 1 .5.866V21a1 1 0 0 1-1 1h-6a1 1 0 0 1-1-1V3a1 1 0 0 1 .5-.866zM16 4.732V20h4V7.041l-4-2.309zM3 22a1 1 0 0 1-1-1V3a1 1 0 0 1 2 0v18a1 1 0 0 1-1 1zm6 0a1 1 0 0 1-1-1V3a1 1 0 0 1 2 0v18a1 1 0 0 1-1 1z">
+                  </path>
+                </svg>
               </div>
-              <div class="col-12  d-flex align-items-center">
-                  <div class="me-3">
-                      <svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 24 24" width="19"
-                          height="19" fill="currentColor" class="Svg-sc-ytk21e-0 bneLcE">
-                          <path
-                              d="M14.5 2.134a1 1 0 0 1 1 0l6 3.464a1 1 0 0 1 .5.866V21a1 1 0 0 1-1 1h-6a1 1 0 0 1-1-1V3a1 1 0 0 1 .5-.866zM16 4.732V20h4V7.041l-4-2.309zM3 22a1 1 0 0 1-1-1V3a1 1 0 0 1 2 0v18a1 1 0 0 1-1 1zm6 0a1 1 0 0 1-1-1V3a1 1 0 0 1 2 0v18a1 1 0 0 1-1 1z">
-                          </path>
-                      </svg>
-                  </div>
-                  <div>
-                      <span>La tua libreria</span>
-                  </div>
+              <div>
+                <span>La tua libreria</span>
               </div>
+            </div>
           </div>
           <div class="border-bottom border-secondary">
-              <div class="col-12 d-flex align-items-center mb-2" role="button" onclick="createPlaylist()">
-                  <div class="me-3">
-                      <i class="bi bi-plus-square-fill"></i>
-                  </div>
-                  <div>
-                      <span>Crea playlist</span>
-                  </div>
+            <div class="col-12 d-flex align-items-center mb-2" role="button" onclick="createPlaylist()">
+              <div class="me-3">
+                <i class="bi bi-plus-square-fill"></i>
               </div>
-              <div class="col-12 d-flex align-items-center mb-2">
-                  <div class="me-3">
-                      <img aria-hidden="true" draggable="false" loading="eager"
-                          src="https://misc.scdn.co/liked-songs/liked-songs-64.png" data-testid="entity-image"
-                          alt="Liked Songs" width="20" height="20" style="border-radius: 2px;"
-                          class="mMx2LUixlnN_Fu45JpFB iJp40IxKg6emF6KYJ414 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
-                          srcset="
+              <div>
+                <span>Crea playlist</span>
+              </div>
+            </div>
+            <div class="col-12 d-flex align-items-center mb-2">
+              <div class="me-3">
+                <img aria-hidden="true" draggable="false" loading="eager"
+                  src="https://misc.scdn.co/liked-songs/liked-songs-64.png" data-testid="entity-image" alt="Liked Songs"
+                  width="20" height="20" style="border-radius: 2px;"
+                  class="mMx2LUixlnN_Fu45JpFB iJp40IxKg6emF6KYJ414 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj" srcset="
           https://misc.scdn.co/liked-songs/liked-songs-64.png 32w,
           https://misc.scdn.co/liked-songs/liked-songs-64.png 64w
         " />
-                  </div>
-                  <div>
-                      <span> Brani che ti piacciono</span>
-                  </div>
               </div>
-              <div class="col-12 d-flex align-items-center mb-4">
-                  <div class="me-3">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="green"
-                          class="bi bi-bookmark-fill bg-green p-1" viewBox="0 0 16 16"
-                          style="background-color: #074537; border-radius: 2px;">
-                          <path
-                              d="M2 2v13.5a.5.5 0 0 0 .74.439L8 13.069l5.26 2.87A.5.5 0 0 0 14 15.5V2a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2" />
-                      </svg>
-                  </div>
-                  <div>
-                      <span> I tuoi episodi </span>
-                  </div>
+              <div>
+                <span> Brani che ti piacciono</span>
               </div>
+            </div>
+            <div class="col-12 d-flex align-items-center mb-4">
+              <div class="me-3">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="green"
+                  class="bi bi-bookmark-fill bg-green p-1" viewBox="0 0 16 16"
+                  style="background-color: #074537; border-radius: 2px;">
+                  <path
+                    d="M2 2v13.5a.5.5 0 0 0 .74.439L8 13.069l5.26 2.87A.5.5 0 0 0 14 15.5V2a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2" />
+                </svg>
+              </div>
+              <div>
+                <span> I tuoi episodi </span>
+              </div>
+            </div>
           </div>
 
 
           <div class="overflow-auto playlist-font">
-              <!-- SEZIONE PLAYLIST-->
+            <!-- SEZIONE PLAYLIST-->
 
-              <ul class="navbar-nav" id="playlist-index">
-                  <!-- PLAYLIST AGGIUNTE DINAMICAMENTE -->
-              </ul>
+            <ul class="navbar-nav" id="playlist-index">
+              <!-- PLAYLIST AGGIUNTE DINAMICAMENTE -->
+            </ul>
           </div>
-      </nav>
+        </nav>
 
 
         <!-- Modale per creare una nuova playlist -->
@@ -225,7 +222,7 @@
                   <div class="imageUser me-1">
                     <img src="assets/imgs/main/image-1.jpg" class="img-fluid rounded-pill" />
                   </div>
-                  <span class="userName me-1 pe-2 fw-bold">Campion Luca</span>
+                  <span class="userName me-1 pe-2 fw-bold">User</span>
                 </button>
                 <ul class="dropdown-menu me-1" aria-labelledby="dropdownMenuButton1">
                   <li><a class="dropdown-item" href="#">Profile</a></li>
@@ -275,7 +272,7 @@
 
           <div class="container-fluid p-0 m-0">
             <div id="main-section" class="row px-4 py-2 d-flex align-items-center justify-content-start">
-              <div class="col-3 d-flex align-items-center gap-4">
+              <div class="col-3 d-flex align-items-center my-3 gap-4">
                 <button class="btn btn-success rounded-circle">
                   <i class="bi bi-play-fill fs-4 text-black pt-2"></i>
                 </button>
