commit delle 16:10 home

--- a/album.html
+++ b/album.html
@@ -203,7 +203,7 @@
 
         <main class="col-9 col-lg-9 p-0 vh-100 overflow-auto" id="test_02">
 
-          <div class="px-4 py-2 border-bottom" id="album-info">
+          <div class="px-4 py-2" id="album-info">
             <div class="d-flex justify-content-between align-content-center my-3">
 
               <div class="fs-4 d-flex ">
