--- a/artist.html
+++ b/artist.html
@@ -322,7 +322,7 @@
   </div>
 
   <!-- FOOTER -->
-   <footer class=" d-flex align-items-center p-4 border-top border-dark">
+   <!-- <footer class=" d-flex align-items-center p-4 border-top border-dark">
     <div class="container-fluid m-0">
       <div class="row">
         <div class="col-3 d-flex align-items-center gap-2">
@@ -360,7 +360,7 @@
         </div>
       </div>
 
-  </footer>
+  </footer> -->
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
